<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mark_complete"
        android:title="@string/action_mark_complete"
        android:icon="@drawable/ic_action_navigation_check"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_mark_not_complete"
        android:icon="@drawable/ic_action_navigation_close"
        android:title="@string/action_mark_not_complete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_archive"
        android:title="@string/archive_project"
        android:icon="@drawable/ic_action_content_archive"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_trash"
        android:title="@string/delete_project"
        android:icon="@drawable/ic_action_action_delete"
        app:showAsAction="ifRoom"/>

</menu>