<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/background_light"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/help_create_project"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/help_create_project"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/help_create_project_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_create_project_body"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/help_join_project"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/help_join_project"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/help_join_project_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_join_project_body"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/help_share_project"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/help_share_project"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/help_share_project_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_share_project_body"
        android:layout_marginTop="5dp"
        />
</LinearLayout>