<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.personal.taskmanager2.signIn.SignInFragment" >


    <com.personal.taskmanager2.utilities.MyEditText
        style="@style/email_edit_text"
        android:id="@+id/emailTextBox"
        android:layout_marginTop="40dp"
        android:hint="@string/email_address">
        <requestFocus />
    </com.personal.taskmanager2.utilities.MyEditText>

    <com.personal.taskmanager2.utilities.MyEditText
        style="@style/password_edit_text"
        android:id="@+id/passwordTextBox"
        android:layout_below="@+id/emailTextBox"
        android:hint="@string/password" >

    </com.personal.taskmanager2.utilities.MyEditText>

    <Button
        style="@style/submit_button"
        android:layout_width="match_parent"
        android:id="@+id/signIn"
        android:text="@string/sign_in"
        android:layout_below="@id/passwordTextBox"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_above="@+id/forgotPassword"
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:clickable="true"
        android:textColor="@drawable/sign_in_fragment_colors"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_alignLeft="@+id/createAccount"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:clickable="true"
        android:textColor="@drawable/sign_in_fragment_colors" />

</RelativeLayout>
