<?xml version="1.0" encoding="utf-8"?>

<ViewSwitcher
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_switcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="@dimen/dialog_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginRight="@dimen/dialog_padding"
            android:text="@string/join_project_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text_default_material_light"/>

        <EditText
            style="@style/uid_edit_text"
            android:id="@+id/joinProjectUID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_uid"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginRight="@dimen/dialog_padding"
            android:layout_below="@id/title">
            <requestFocus />
        </EditText>

        <EditText
            style="@style/password_edit_text"
            android:id="@+id/joinProjectPassword"
            android:layout_below="@+id/joinProjectUID"
            android:hint="@string/password"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginRight="@dimen/dialog_padding"/>


        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/join_project"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignEnd="@id/space"
            android:layout_alignRight="@id/space"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/joinProjectPassword"
            android:minWidth="64dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/action_create"
            android:textColor="@color/theme_primary"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@id/joinProjectPassword"
            android:layout_toLeftOf="@id/join_project"
            android:layout_toStartOf="@id/join_project"
            android:minWidth="64dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/action_cancel"
            android:textColor="@color/theme_primary"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

    </RelativeLayout>

    <ProgressBar
        style="@style/center_progress"
        android:id="@+id/create_project_progress"
        android:layout_gravity="center"/>

</ViewSwitcher>
