<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="@dimen/dialog_padding"
                tools:context="com.personal.taskmanager2.ui.signIn.CreateAccountFragment" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text_default_material_light"/>

    <EditText
        style="@style/account_create_name"
        android:id="@+id/accountCreateName"
        android:hint="@string/name"
        android:layout_below="@id/title"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding">
        <requestFocus />
    </EditText>

    <EditText
        style="@style/email_edit_text"
        android:id="@+id/accountCreateEmail"
        android:layout_below="@+id/accountCreateName"
        android:hint="@string/email_address"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding"/>

    <EditText
        style="@style/password_edit_text"
        android:id="@+id/accountCreatePassword"
        android:layout_below="@+id/accountCreateEmail"
        android:hint="@string/password"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding"/>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/createNewAccount"
        android:minWidth="64dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignEnd="@id/space"
        android:layout_alignRight="@id/space"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/accountCreatePassword"
        android:text="@string/create_account"
        android:textColor="@color/theme_primary"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

    <ProgressBar
        style="@style/center_progress"
        android:id="@+id/accountCreateProgress"/>

</RelativeLayout>
