<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

    <!--NAME-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/account_settings_name_label"
        android:text="@string/name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/account_settings_edit_name"
        android:layout_below="@id/account_settings_name_label">
        <requestFocus />
    </EditText>

    <!--PHONE-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/account_settings_phone_label"
        android:text="@string/phone"
        android:layout_below="@+id/account_settings_edit_name"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/account_settings_edit_phone"
        android:layout_below="@+id/account_settings_phone_label" />

    <!--NEW PASS-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/account_settings_new_password_label"
        android:text="@string/new_password"
        android:layout_below="@+id/account_settings_edit_phone"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_settings_edit_new_password"
        android:inputType="textPassword"
        android:layout_below="@+id/account_settings_new_password_label" />

    <!--CONFIRM PASS-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/account_settings_confirm_password_label"
        android:text="@string/confirm_password"
        android:layout_below="@+id/account_settings_edit_new_password"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_settings_edit_confirm_password"
        android:inputType="textPassword"
        android:layout_below="@+id/account_settings_confirm_password_label" />

    <!--OLD PASS-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/account_settings_old_password_label"
        android:text="@string/old_password"
        android:layout_below="@+id/account_settings_edit_confirm_password"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_settings_edit_old_password"
        android:layout_below="@+id/account_settings_old_password_label"
        android:inputType="textPassword"
        android:hint="Enter to save changes"
        android:imeOptions="actionDone"/>

    <!--SAVE CHANGES-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        android:id="@+id/account_settings_save_changes_btn"
        android:layout_below="@+id/account_settings_edit_old_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:padding="10dp" />

</RelativeLayout>
