<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.personal.taskmanager2.ui.homescreen.NavigationDrawerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:background="@color/nav_drawer_user_background">

            <TextView
                android:layout_marginTop="6dp"
                android:id="@+id/nav_drawer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_marginBottom="6dp"
                android:id="@+id/nav_drawer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:textColor="@android:color/white"/>
        </LinearLayout>


        <TextView
            android:id="@+id/projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="6dp"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_action_action_view_headline"
            android:text="@string/my_projects_title"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/nav_drawer_main_item_background"
            />

        <TextView
            android:id="@+id/archive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="6dp"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_action_content_archive"
            android:text="@string/archive_title"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/nav_drawer_main_item_background"
            />

        <TextView
            android:id="@+id/trash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="6dp"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_action_action_delete"
            android:text="@string/trash_title"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/nav_drawer_main_item_background"
            />

        <View style="@style/horizontal_divider"/>

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="6dp"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_action_person"
            android:text="@string/account_settings_title"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/nav_drawer_main_item_background"
            />


        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="6dp"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_action_settings"
            android:text="@string/action_settings"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/nav_drawer_main_item_background"
            />


        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="6dp"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_action_help"
            android:text="@string/help_title"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/nav_drawer_main_item_background"
            />


    </LinearLayout>

</ScrollView>
